# fos_client

./: .gitignore  Cargo.toml  LICENSE  build.rs  cliff.toml  install.sh  justfile  renovate.json
.github/actions/build-rust/: action.yml
.github/actions/setup-chicken/: action.yml
.github/workflows/: release-linux.yml  release.yml
scripts/: release.sh
src/: chat.rs  debug.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
